--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start:dev": "",
-    "start": "",
-    "server": "",
-    "build": "",
-    "install": "",
-    "client": ""
+    "start:dev": "",  
+    "start": "node server/server.js",          
+    "server": "",        
+    "build": "",                        
+    "install": "",                     
+    "client": ""                        
   },
   "keywords": [],
   "author": "",
